# fritzhome

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CMakeLists.txt  README.md
cmake/: toolchain-aarch64.cmake
data/: de.fritzhome.fritzhome.metainfo.xml  io.github.flunaras.fritzhome.desktop  io.github.flunaras.fritzhome.metainfo.xml
docker/: Dockerfile.leap15.6  Dockerfile.leap16.0  Dockerfile.tumbleweed  Dockerfile.tumbleweed-aarch64  Dockerfile.ubuntu24.04  build.sh
po/de/: fritzhome.po
src/: alarmwidget.cpp  alarmwidget.h  blindwidget.cpp  blindwidget.h  chartutils.cpp  chartutils.h  chartwidget.cpp  chartwidget.h  colorwidget.cpp  colorwidget.h  devicemodel.cpp  devicemodel.h  devicewidget.cpp  devicewidget.h  dimmerwidget.cpp  dimmerwidget.h  energygaugebuilder.cpp  energygaugebuilder.h  energyhistorybuilder.cpp  energyhistorybuilder.h  energywidget.cpp  energywidget.h  fritzapi.cpp  fritzapi.h  fritzdevice.h  fritzhomeui.rc  humiditysensorwidget.cpp  humiditysensorwidget.h  i18n_shim.h  loginwindow.cpp  loginwindow.h  main.cpp  mainwindow.cpp  mainwindow.h  powerchartbuilder.cpp  powerchartbuilder.h  resources.qrc  secretstore.cpp  secretstore.h  switchwidget.cpp  (+5 more)
translations/: fritzhome_de.ts
